# shrub

./: CMakeLists.txt  README.md
examples/: basic_render.cpp
include/glad/: gl.h
include/shrub/: bitmap.h  context.h  input.h  window.h
include/tngl/: buffer.h  debug.h  framebuffer.h  shader.h  texture.h
src/: glad_gl.c  shrub_window.cpp
src/shrub/: bitmap.cpp  context.cpp  window.cpp
